[tool.poetry]
name = "fastchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastchain", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = {extras = ["all"], version = "^0.104.0"}
langchain = "^0.0.321"
jq = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
